<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mtro"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/select_no_of_candidates"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#E64A19"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="358dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/customb"
        android:text="@string/_2"
        android:textColor="#090909"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="358dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/customb"
        android:text="@string/_3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="358dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/customb"
        android:text="@string/_4"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="358dp"
        android:layout_height="0dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/customb"
        android:text="@string/_5"
        android:textColor="#0B0A0A"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

</androidx.constraintlayout.widget.ConstraintLayout>