<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resot"
    tools:context=".result2">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/txt1"
        android:textColor="#E5E6EF"
        android:textSize="29sp"
        app:fontFamily="@font/amaranth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/txt2"
        android:textColor="#E5E6EF"
        android:textSize="29sp"
        app:fontFamily="@font/amaranth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:hint="@string/total"
        android:textColor="#F85522"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="@font/fondamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/results"
        android:textAllCaps="true"
        android:textColor="#FFC107"
        android:textSize="38sp"
        app:fontFamily="@font/berkshire_swash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>