<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vv"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="393dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/the_voting_app"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="@font/trade_winds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn"
        android:layout_width="201dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/greyg"
        android:text="@string/start_voting"
        android:textColor="#F8F7F7"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnab"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greyg"
        android:gravity="center"
        android:text="@string/about_the_app"
        android:textColor="#F1E0E0"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btn"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <Button
        android:id="@+id/btnc"
        android:layout_width="119dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greyg"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="#F1E0E0"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/btnab"
        app:layout_constraintTop_toBottomOf="@+id/btnab" />

</androidx.constraintlayout.widget.ConstraintLayout>